--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://tafiviejo.com.ar:3306/appbar
+spring.datasource.username=root
+spring.datasource.password=Tesis2020!
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
